# dummyOS

./: .gitignore  LICENSE  Makefile  README.md  make.config  meson.build  meson_options.txt
arch/: meson.build
arch/arm/: arch.c  atags.c  atags.h  cpu.c  cpu_context.S  cpu_context.c  cpu_context.h  exception.S  exception.c  exception.h  interrupt.S  machine.c  meson.build  syscall.S
arch/arm/broadcom/bcm2835/: bcm2835.c  gpio.c  gpio.h  irq.c  kernel.ld  log.c  meson.build  timer.c  timer.h  uart.c  uart.h
arch/arm/broadcom/bcm2835/mailbox/: mailbox.c  meson.build  property.c
arch/arm/broadcom/bcm2836/: bcm2836.c  meson.build  peripherals.h  timer.c  timer.h
arch/arm/include/arch/: atomic.h  cpu.h  elf.h  halt.h  irq.h  machine.h  paging.h
arch/arm/include/arch/broadcom/bcm2835/: bcm2835.h  irq.h  log.h  memory.h  peripherals.h
arch/arm/include/arch/broadcom/bcm2835/mailbox/: mailbox.h  property.h
arch/arm/include/arch/broadcom/bcm2836/: bcm2836.h
arch/arm/v6/: meson.build  start.S
arch/arm/v7/: fault.c  meson.build  paging.c  paging.h  start.S  vmm.c
arch/i686/: Makefile  kernel.ld
arch/i686/boot/: Makefile
arch/i686/drivers/: terminal.c
arch/x86/: Makefile  arch.c  console.c  console.h  context_switch.c  cpu.c  cpu_context.S  cpu_context.c  cpu_context.h  cpu_context_switch.s  debug.c  exception.S  exception.c  exception.h  gdt.c  gdt.h  i8254.c  i8254.h  i8259.c  i8259.h  idt.c  idt.h  interrupt.S  interrupt.h  io_ports.h  irq.S  irq.c  irq.h  kernel.ld  log.h  make.config  meson.build  paging.c  segment.h  syscall.S  syscall.s  tss.c  tss.h  usermode.c  vm_context.c
arch/x86/boot/: boot.s  make.config  meson.build
arch/x86/drivers/: Makefile  ioport_0xe9.c  ioport_0xe9.h  keyboard.c  keyboard.h  make.config  meson.build  terminal.c
arch/x86/drivers/keymaps/: fr.src
arch/x86/include/arch/: atomic.h  cpu_context.h  elf.h  halt.h  irq.h  log.h  memory.h  memory_context.h  paging.h  types.h  utils.h  virtual_memory.h  vm.h  vm_context.h
arch/x86/include/arch/locking/: spinlock.h
arch/x86/mm/: fault.c  memory.c  memory.h  meson.build  paging.c  paging.h  vm.h  vmm.c  vmm.h
fs/: Makefile  binfmt_elf.c  cache_node.c  chardev.c  device.c  fifo.c  file.c  filesystem.c  inode.c  io.c  make.config  meson.build  path.c  pipe.c  stat.c  superblock.c  tty.c  vfs.c
fs/ramfs/: Makefile  make.config  meson.build  ramfs.c
include/dummyos/: compiler.h  const.h  dirent.h  errno.h  fcntl.h  ioctl.h  keymap.h  signal.h  stat.h  syscall.h  termios.h  time.h  types.h
include/dummyos/ioctl/: ioctls.h
include/fs/: cache_node.h  chardev.h  device.h  fifo.h  file.h  filesystem.h  inode.h  io.h  path.h  pipe.h  superblock.h  tty.h  vfs.h
include/fs/ramfs/: ramfs.h
include/kernel/: arch.h  atomic.h  console.h  context_switch.h  cpu.h  cpu_context.h  debug.h  elf.h  errno.h  exec.h  halt.h  init.h  interrupt.h  kassert.h  kernel.h  kernel_image.h  kheap.h  kmalloc.h  kthread.h  libk.h  list.h  log.h  memory.h  page_frame_status.h  paging.h  panic.h  process.h  sched.h  signal.h  synced_list.h  syscall.h  sz_list.h  terminal.h  thread.h  thread_list.h  time.h  tty.h  types.h  usermode.h  vga.h  (+1 more)
include/kernel/locking/: mutex.h  semaphore.h  spinlock.h
include/kernel/mm/: mapping.h  memory.h  region.h  uaccess.h  vm.h  vmm.h
include/kernel/sched/: idle.h  reaper.h  sched.h  wait.h
include/kernel/time/: time.h  timer.h
include/libk/: bits.h  circ_buf.h  deque.h  endian.h  endian_little.h  libk.h  list.h  refcount.h  sz_list.h  utils.h
include/usr/: dirent.h  fcntl.h  signal.h  termios.h
include/usr/sys/: ioctls.h
kernel/: Makefile  console.c  exec.c  exit.c  fork.c  init.c  kernel.c  kernel_image.c  kheap.c  kmalloc.c  log.c  make.config  memory.c  meson.build  process.c  sched.c  signal.c  sys.c  syscall.c  thread.c  time.c  tty.c
kernel/locking/: Makefile  make.config  meson.build  semaphore.c
kernel/mm/: mapping.c  memory.c  meson.build  region.c  uaccess.c  vmm.c
kernel/sched/: Makefile  idle.c  make.config  meson.build  reaper.c  sched.c  wait.c
kernel/time/: Makefile  make.config  meson.build  time.c  timer.c
libk/: Makefile  ctype.c  make.config  memcmp.c  memcpy.c  memset.c  meson.build  refcount.c  snprintf.c  strcat.c  strcmp.c  strcpy.c  strdup.c  strlcpy.c  strlen.c  strncat.c  strncmp.c  strncpy.c  strnlen.c  strtol.c  vsnprintf.c
scripts/: iso.sh  qemu.sh
support/: iso.sh  qemu.sh
